Exercise-21/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exercise21
  labels:
    environment: production
    exercise: "21"
